feat: 누락된 JWT claim 입력, 환경변수에 따라 allowed origin 설정, 네이밍 통일, 기타 버그 수정